DTS-50325: added bottom panel